Apply TraceWrapper correctly for decudeAudioData callbacks.

emplace_back does not construct the object to include the
TraceWrapperMember.  Instead use push_back with explicit construction
of the TraceWrapperMember to wrap the callback pointers.

Manually tested this fix using the repro case from
https://bugs.chromium.org/p/chromium/issues/detail?id=717723#c23 and
verify that a tone is heard, as expected.

Bug: 757563, 717723
Test: Run repro from 717723
Change-Id: If49501e0997c42f44e05f63323f3c42e6cee1913
Reviewed-on: https://chromium-review.googlesource.com/624620
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Cr-Commit-Position: refs/branch-heads/3163@{#738}
Cr-Branched-From: ff259bab28b35d242e10186cd63af7ed404fae0d-refs/heads/master@{#488528}